password hashing complete, swagger example req and res fixed
