# auth/internal/model/user.go
@@ -4,15 +4,16 @@ import "time"
 
 type User struct {
 	ID               uint       `gorm:"primaryKey" json:"id"`
-	FirstName        string     `gorm:"size:255;not null" json:"first_name"`
-	LastName         string     `gorm:"size:255;not null" json:"last_name"`
+	FirstName        string     `gorm:"size:255;not null" json:"firstName"`
+	LastName         string     `gorm:"size:255;not null" json:"lastName"`
 	Email            string     `gorm:"size:255;unique;not null" json:"email"`
-	Password         string     `gorm:"size:255;not null" json:"password"`
+	Password         string     `gorm:"size:511;not null" json:"-"` // Ignore in JSON
 	Contact          string     `gorm:"size:255;not null" json:"contact"`
-	DOB              *time.Time `gorm:"type:date" json:"dob,omitempty"` 
-	RegistrationDate *time.Time `gorm:"type:date" json:"registration_date,omitempty"` 
-	EmailVerifiedYn  string     `gorm:"not null" json:"email_verified"`
-	CreatedAt        *time.Time `json:"created_at,omitempty"`
-	UpdatedAt        *time.Time `json:"updated_at,omitempty"`
-	DeletedAt        *time.Time `gorm:"index" json:"deleted_at,omitempty"`
+	DOB              *time.Time `gorm:"type:date" json:"dob,omitempty"`
+	RegistrationDate *time.Time `gorm:"type:date" json:"registrationDate,omitempty"`
+	EmailVerifiedYn  string     `gorm:"not null" json:"emailVerifiedYn"`
+	CreatedAt        *time.Time `json:"-"` // Ignore in JSON
+	UpdatedAt        *time.Time `json:"-"` // Ignore in JSON
+	DeletedAt        *time.Time `gorm:"index" json:"-"` // Ignore in JSON
 }
+
